--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=DAglory20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#CLOUDINARY_URL=cloudinary://221525522983816:y7w8-L8yh0NDe8AGMltZ6j7nWxU@bloggingapplication
+CLOUD_NAME=bloggingapplication
+API_KEY=221525522983816
+API_SECRET=y7w8-L8yh0NDe8AGMltZ6j7nWxU
