--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=root
-spring.datasource.password=DAglory20
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+#spring.datasource.username=root
+#spring.datasource.password=DAglory20
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.profiles.active=dev
 #CLOUDINARY_URL=cloudinary://221525522983816:y7w8-L8yh0NDe8AGMltZ6j7nWxU@bloggingapplication
 CLOUD_NAME=bloggingapplication
 API_KEY=221525522983816
